# XXTEMPLATEXX

./: CMakeLists.txt  Makefile  README.md  config.h  init.sh
.github/workflows/: XXTEMPLATEXX.yml
src/: main.cpp
test/: main.cpp
